--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,4 +69,8 @@ dependencies {
     //Rx
     implementation "io.reactivex.rxjava2:rxjava:2.2.0"
     implementation "io.reactivex.rxjava2:rxandroid:2.1.0"
+
+    //picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
 }
