Add Android Architecture Components

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,7 @@ android {
 
     dataBinding {
         enabled = true
+
     }
 
     defaultConfig {
@@ -16,6 +17,12 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        kapt {
+            arguments {
+                arg("room.schemaLocation", "$projectDir/schemas".toString())
+            }
+        }
 
     }
     buildTypes {
