--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,11 +18,11 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
-        kapt {
+        /*kapt {
             arguments {
                 arg("room.schemaLocation", "$projectDir/schemas".toString())
             }
-        }
+        }*/
 
     }
     buildTypes {
@@ -78,6 +78,6 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxandroid:2.1.0"
 
     //picasso
-    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 
 }
